tests/rosetta/out/Haskell/boolean-values.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/boolean-values.hs:46:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/boolean-values.hs:41:1
                 /workspace/mochi/tests/rosetta/out/Haskell/boolean-values.hs:46:1
   |
46 | main = do
   | ^^^^
